# restorekit

./: .gitignore  .gitmodules  .goreleaser.yaml  Cargo.toml  LICENSE  NOTICE  README.md  justfile  package.json  pnpm-lock.yaml
.github/workflows/: bump-release-fw.yml  bump-release.yml  ci-windows.yml  ci.yml  deploy-landing.yml  release-app.yml  release-fw.yml  release.yml
apps/desktop/: .env.example  .gitignore  build-signed.sh  index.html  package-lock.json  package.json  stage-helper.sh  tsconfig.json  vite.config.ts
apps/desktop/homebrew/: restorekit.rb
apps/desktop/scripts/: gen-licenses.mjs  tauri.mjs
apps/desktop/snap/: snapcraft.yaml
apps/desktop/src/: App.svelte  main.ts
apps/desktop/src-tauri/: Cargo.toml  about.hbs  about.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/csrc/: privhelper.m
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/launchd/: com.leftshift.restorekit.helper.plist
apps/desktop/src-tauri/src/: commands.rs  elevate.rs  history.rs  lib.rs  main.rs  restores.rs  settings.rs  winusb.rs  worker.rs
apps/desktop/src/components/: ApproveHelper.svelte  Confirm.svelte  ConfirmErase.svelte  DeviceCard.svelte  DeviceRow.svelte  Logo.svelte  Progress.svelte  SetupUsb.svelte
apps/desktop/src/lib/: api.ts  licenses.html  theme.css  updater.ts
apps/landing/: index.html  package.json  tsconfig.json  tsconfig.worker.json  vite.config.ts  wrangler.jsonc
apps/landing/migrations/: 0000_reservations.sql
apps/landing/migrations/meta/: 0000_snapshot.json  _journal.json
apps/landing/src/: App.svelte  app.css  worker.ts
apps/landing/src/assets/: dongle-lite.glb
apps/landing/src/components/: Code.svelte  DongleScene.svelte  DongleSceneInner.svelte  RecoveryScene.svelte  RecoverySceneInner.svelte
apps/landing/src/db/: schema.ts
apps/landing/src/lib/: highlight.ts
crates/applerestore/: Cargo.toml
crates/applerestore-cli/: Cargo.toml
crates/applerestore-cli/src/: main.rs
crates/applerestore-cli/src/commands/: cache.rs  dfu.rs  download.rs  mod.rs  render.rs  restore.rs  status.rs
crates/applerestore-sys/: Cargo.toml  build.rs
crates/applerestore-sys/csrc/: log_capture.c
crates/applerestore-sys/src/: lib.rs
crates/applerestore/src/: device.rs  firmware.rs  lib.rs  progress.rs  restore.rs
crates/applerestore/src/dfu/: discovery.rs  vdm.rs
crates/applerestore/src/firmware/: cache.rs  download.rs  mod.rs
crates/dongle-lite-boot/: Cargo.toml  build.rs  memory.x
crates/dongle-lite-boot/.cargo/: config.toml
crates/dongle-lite-boot/src/: main.rs
crates/dongle-lite-fw/: Cargo.toml  README.md  build.rs  memory.x
crates/dongle-lite-fw/.cargo/: config.toml
crates/dongle-lite-fw/src/: fusb302.rs  main.rs
crates/helper/: Cargo.toml  build.rs
crates/helper/csrc/: xpc_daemon.m
crates/helper/src/: main.rs
crates/restorekit/: Cargo.toml
crates/restorekit-cli/: Cargo.toml
crates/restorekit-cli/src/: main.rs
crates/restorekit-cli/src/commands/: cache.rs  dfu.rs  dongle.rs  download.rs  history.rs  list.rs  mod.rs  render.rs  restore.rs  setup_driver.rs
crates/restorekit-dfu-helper/: Cargo.toml
crates/restorekit-dfu-helper/src/: main.rs
crates/restorekit-dongle-proto/: Cargo.toml
crates/restorekit-dongle-proto/src/: lib.rs
crates/restorekit-sys/: Cargo.toml  build.rs
crates/restorekit-sys/csrc/: log_capture.c  usbmuxd_server.c
crates/restorekit-sys/csrc/win_shim/: _rk_win_sockcompat.h  poll.h  syslog.h
crates/restorekit-sys/csrc/win_shim/netinet/: tcp.h
crates/restorekit-sys/csrc/win_shim/sys/: time.h  un.h
crates/restorekit-sys/patches/: README.md
crates/restorekit-sys/patches/idevicerestore/: 0001-send-file-data-as-binary-plist.patch  0002-retry-component-sends-on-transport-failure.patch  0003-obliterate-only-stop-after-effaceable-wipe.patch  0004-log-full-checkpoint-plists.patch  0005-asr-resilient-chunk-retry.patch  0005-set-custom-restore-boot-args.patch  0007-larger-image-upload-chunks.patch
crates/restorekit-sys/src/: lib.rs
crates/restorekit/migrations/: 001_init.sql  002_seen_devices.sql  003_obliteration.sql  004_checkpoints.sql
crates/restorekit/src/: device.rs  dongle.rs  driver.rs  error.rs  history.rs  lib.rs  progress.rs  restore.rs  usbmuxd.rs
crates/restorekit/src/dfu/: discovery.rs  mod.rs  port.rs  trigger.rs  vdm.rs
crates/restorekit/src/firmware/: cache.rs  download.rs  mod.rs  resolve.rs
crates/restorekit/tests/: history_roundtrip.rs
docs/: DEPLOYMENT.md  WINGET.md  building.md  fast-restore-investigation.md  gui-prd.md  obliterate.md  plan.md  prd.md  restore-attestation.md  thunderbolt-restore.md  windows-restore.md
docs/dongle/: PRD.md
hardware/: README.md
hardware/dongle-lite/: .gitignore  AGENT_HANDOFF.md  BOM-sourcing.md  BOM.md  M0-bench-shopping.csv  PCB-DESIGN-BRIEF.md  PRD.md  README.md  WIRING.md  dongle-lite-1s4l.kicad_pcb  dongle-lite-1s4l.kicad_pro  dongle-lite.kicad_pcb  dongle-lite.kicad_pro  dongle-lite.kicad_sch  fp-lib-table  sym-lib-table
hardware/dongle-lite-hw/: .gitignore  README.md  core.kicad_sch  dongle-lite-hw.kicad_pro  dongle-lite-hw.kicad_sch  hub.kicad_sch  pd.kicad_sch  power.kicad_sch  sbu.kicad_sch
hardware/dongle-lite-hw/lib/dongle-lite.3dshapes/: SC-88-6P_L2.0-W1.3-H1.0-LS2.1.wrl  SOIC-8_L5.2-W5.2-P1.27-LS7.9-BL.wrl
hardware/dongle-lite-hw/lib/dongle-lite.pretty/: C0402.kicad_mod  C0805.kicad_mod  (+16 more)
hardware/dongle-lite/firmware/: Cargo.toml  README.md
hardware/dongle-lite/lib/: dongle-lite.kicad_sym
hardware/dongle-lite/mfg-jlcpcb/: README-JLCPCB.md  bom.csv  cpl.csv
hardware/dongle-lite/mfg-jlcpcb-1s4l/: README-JLCPCB.md  cpl.csv
hardware/dongle-pro/: PRD.md  README.md  dongle-pro.dsn  dongle-pro.kicad_dru  dongle-pro.kicad_pcb  dongle-pro.kicad_prl  dongle-pro.kicad_pro  dongle-pro.kicad_sch  dongle-pro.ses  lib
hardware/dongle-pro/mfg-jlcpcb/: README-JLCPCB.md  bom.csv  cpl.csv
scripts/: bump-fw-version.sh  bump-version.sh  goreleaser-prebuilt.sh  merge-uf2.mjs  merge-uf2.py
udev/: 51-restorekit.rules
(+73 files in other folders)
