[workspace]
resolver = "2"
members = [
    "crates/restorekit",
    "crates/restorekit-sys",
    "crates/restorekit-cli",
    "crates/helper",
]
# The Tauri app pulls in webkit/GTK deps that don't build on the Linux CI
# runners, so it's a standalone crate outside the workspace build.
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.4.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fcjr/restorekit"
homepage = "https://github.com/fcjr/restorekit"
authors = ["Frank Chiarulli Jr. <frank@frankchiarulli.com>"]
keywords = ["macos", "dfu", "restore", "apple-silicon", "idevicerestore"]
categories = ["command-line-utilities", "hardware-support"]

[profile.release]
lto = true
strip = true
