[workspace]
resolver = "2"
members = [
    "crates/restorekit",
    "crates/restorekit-sys",
    "crates/restorekit-cli",
    "crates/restorekit-dongle-proto",
    "crates/helper",
]
# The Tauri app pulls in webkit/GTK deps that don't build on the Linux CI
# runners, so it's a standalone crate outside the workspace build. The dongle
# firmware is a bare-metal thumbv6m crate, built standalone from its own dir.
exclude = ["apps/desktop/src-tauri", "crates/dongle-lite-fw"]

[workspace.package]
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fcjr/restorekit"
homepage = "https://github.com/fcjr/restorekit"
authors = ["Frank Chiarulli Jr. <frank@frankchiarulli.com>"]
keywords = ["macos", "dfu", "restore", "apple-silicon", "idevicerestore"]
categories = ["command-line-utilities", "hardware-support"]

[profile.release]
lto = true
strip = true
