[package]
name = "applerestore"
description = "Library for DFU-restoring Apple Silicon Macs: DFU trigger, detection, firmware download, and restore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
applerestore-sys = { path = "../applerestore-sys", version = "0.1.0" }
nusb = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
thiserror = "2"
sha1 = "0.10"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
core-foundation = "0.10"
