# Standalone crate: this is a bare-metal thumbv6m target, kept out of the
# host-side restorekit workspace (see `exclude` in the root Cargo.toml). It
# shares the USB wire protocol with the SDK via restorekit-dongle-proto.
[workspace]

[package]
name = "dongle-lite-fw"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
description = "RecoverKit Dongle Lite M0 bench firmware (RP2040 + FUSB302B)"
publish = false

[[bin]]
name = "dongle-lite-fw"
test = false
bench = false

[dependencies]
restorekit-dongle-proto = { path = "../restorekit-dongle-proto" }

embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-usb = { version = "0.6.0", features = ["defmt", "max-interface-count-8"] }
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
embedded-hal-async = "1.0"
embedded-io-async = "0.7.0"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.9"

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"

[profile.dev]
debug = 2
opt-level = 1
