# Standalone crate: this is a bare-metal thumbv8m (RP2350) target, kept out of the
# host-side restorekit workspace (see `exclude` in the root Cargo.toml). It
# shares the USB wire protocol with the SDK via restorekit-dongle-proto.
[workspace]

[package]
name = "dongle-lite-fw"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
description = "RecoverKit Dongle Lite firmware (RP2354A / RP2350 + FUSB302B)"
publish = false

[[bin]]
name = "dongle-lite-fw"
test = false
bench = false

[features]
# Dongle Pro (USB 3.1 Gen 1 passthrough variant): identifies as Dongle-Pro
# with a DP- serial, so the host SDK and updater can tell the models apart.
# Same board family; GP26 drives the HD3SS3212 SS lane select (harmlessly
# unconnected on the USB 2.0 Lite board).
pro = []

[dependencies]
restorekit-dongle-proto = { path = "../restorekit-dongle-proto" }

embassy-boot-rp = "0.10.0"
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
# imagedef-none: the app runs behind the dongle-lite-boot bootloader, which the
# RP2350 boot ROM launches via *its* IMAGE_DEF; the bootloader then jumps
# straight to this app's vector table at the ACTIVE partition. So the app image
# carries no IMAGE_DEF/start-block of its own — it's a plain M33 image whose
# vector table sits at ORIGIN(FLASH) (the ACTIVE slot), exactly what the loader
# jumps to.
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "imagedef-none"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-usb = { version = "0.6.0", features = ["defmt", "max-interface-count-8"] }
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
embedded-hal-async = "1.0"
embedded-io-async = "0.7.0"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.9"

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"

[profile.dev]
debug = 2
opt-level = 1
