[package]
name = "helper"
description = "Privileged root helper daemon for the RestoreKit app (triggers DFU over XPC)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "helper"
path = "src/main.rs"

[dependencies]
restorekit = { path = "../restorekit" }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"
