[package]
name = "restorekit-cli"
description = "CLI for DFU-restoring Apple Silicon Macs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "restorekit"
path = "src/main.rs"

[dependencies]
restorekit = { path = "../restorekit", version = "0.1.5" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
