[package]
name = "restorekit-dfu-helper"
description = "Privileged helper that triggers DFU mode (run as root by the restorekit app)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "restorekit-dfu-helper"
path = "src/main.rs"

[dependencies]
restorekit = { path = "../restorekit" }
