[package]
name = "restorekit"
description = "Library for DFU-restoring Apple Silicon Macs: DFU trigger, detection, firmware download, and restore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = ["history"]
# Persistent capture/restore history, stored in a bundled-SQLite database with
# migrations embedded in the binary. Pulls in rusqlite (statically linked).
history = ["dep:rusqlite", "dep:rusqlite_migration"]

[dependencies]
restorekit-sys = { path = "../restorekit-sys", version = "0.5.4" }
restorekit-dongle-proto = { path = "../restorekit-dongle-proto", version = "0.5.4" }
nusb = "0.2"
futures-core = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
thiserror = "2"
sha1 = "0.10"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
rusqlite_migration = { version = "1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[package.metadata.docs.rs]
# The native C stack is skipped on docs.rs (restorekit-sys/build.rs no-ops
# when DOCS_RS is set). Build docs for the linux host target.
default-target = "x86_64-unknown-linux-gnu"
