[package]
name = "restorekit-desktop"
version = "0.1.0"
edition = "2021"
description = "Restore Apple Silicon Macs — desktop app"
authors = ["Frank Chiarulli Jr. <frank@frankchiarulli.com>"]
license = "Apache-2.0"
publish = false

[lib]
name = "restorekit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nusb = "0.2"
restorekit = { path = "../../../crates/restorekit" }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
