[package]
name = "restorekit-desktop"
version = "0.3.0"
edition = "2021"
description = "Restore Apple Silicon Macs — desktop app"
authors = ["Frank Chiarulli Jr. <frank@frankchiarulli.com>"]
license = "Apache-2.0"
publish = false

[lib]
name = "restorekit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nusb = "0.2"
restorekit = { path = "../../../crates/restorekit" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
