[package]
name = "restorekit-desktop"
version = "0.5.0"
edition = "2021"
description = "Restore Apple Silicon Macs — desktop app"
authors = ["Frank Chiarulli Jr. <frank@frankchiarulli.com>"]
license = "Apache-2.0"
publish = false

[lib]
name = "restorekit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[features]
default = ["history"]
# Serial-capture history (SQLite store) + QR rendering. Off strips rusqlite/QR.
history = ["restorekit/history", "dep:qrcode"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nusb = "0.2"
qrcode = { version = "0.14", default-features = false, features = ["svg"], optional = true }
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros"] }
restorekit = { path = "../../../crates/restorekit", default-features = false }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
